name:                linear-opengl
version:             0.1.0.0
synopsis:            Isomorphisms between linear and OpenGL types
-- description:         
homepage:            http://www.github.com/bgamari/linear-opengl
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari.foss@gmail.com
copyright:           (c) 2014 Ben Gamari
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Linear.OpenGL
  build-depends:       base >=4.7 && <4.8,
                       linear >=1.10 && <1.11,
                       OpenGL >=2.9 && <2.10,
                       lens >=4.2 && <4.3
  hs-source-dirs:      src
  default-language:    Haskell2010
