name:                linear-opengl
version:             0.3.0.0
synopsis:            Isomorphisms between linear and OpenGL types
description:         This provides various useful utilities for mapping OpenGL vectors, vertices, and matrices to their analogues in the `linear` package
homepage:            http://www.github.com/bgamari/linear-opengl
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari.foss@gmail.com
copyright:           (c) 2014 Ben Gamari
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  location:            git://github.com/bgamari/linear-opengl
  type:                git

library
  exposed-modules:     Linear.OpenGL
  other-modules:       Linear.OpenGL.MatrixUniforms
  build-depends:       base >=4.6 && <4.22,
                       linear >=1.10 && <1.24,
                       lens >=4.2 && <5.4,
                       distributive >=0.4 && <0.7,
                       tagged >= 0.7 && < 0.9,
                       OpenGL >=2.9 && <3.1,
                       OpenGLRaw >= 1.5 && <3.4
  hs-source-dirs:      src
  default-language:    Haskell2010
